--- a/index.html
+++ b/index.html
@@ -82,6 +82,13 @@
         Die verwendeten Bibliotheken unterliegen jeweils ihren eigenen Open-Source-Lizenzen.
     </p>
 
+    <h2>Verwendete Musik</h2>
+    <p>
+        In dieser App wird das Musikstück <strong>"Helios"</strong> von <strong>Jeremy Black</strong> verwendet.<br>
+        Quelle: <a href="https://www.youtube.com/channel/UCwn53FLEtlJ9dNCH8IRtNIA" target="_blank">Jeremy Black auf YouTube</a><br>
+        Bereitgestellt über die <a href="https://www.youtube.com/audiolibrary" target="_blank">YouTube Audio Library</a>.
+    </p>
+
     <h2>Version</h2>
     <p>
         PleaseCatchMe v1.0 - Stand: April 2025
