--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
     <p>
         Angaben gemäß § 5 TMG:<br>
         Akin Tas<br>
-        Postfach 1234<br>
-        12345 Musterstadt<br>
+        An der Bauerwiese 13<br>
+        30459 Hannover<br>
         Deutschland<br>
         E-Mail: <a href="mailto:akin-tas96@hotmail.de">akin-tas96@hotmail.de</a>
     </p>
