--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <p>
         Angaben gemäß § 5 TMG:<br>
         Akin Tas<br>
-        An der Bauerwiese 13<br>
+        Postfach 920134<br>
         30459 Hannover<br>
         Deutschland<br>
         E-Mail: <a href="mailto:akin-tas96@hotmail.de">akin-tas96@hotmail.de</a>
