--- a/index.html
+++ b/index.html
@@ -89,6 +89,13 @@
         Bereitgestellt über die <a href="https://www.youtube.com/audiolibrary" target="_blank">YouTube Audio Library</a>.
     </p>
 
+        <h2>Danksagung</h2>
+    <p>
+        Ein besonderer Dank geht an <strong>Thomas</strong> für die Idee zum Spielnamen <strong>Gotchya!</strong>.<br>
+        Außerdem danke ich meinen Eltern, meinem Bruder, meiner Familie, meinen Freunden und Anne für ihre Unterstützung,
+        Geduld und Motivation während der Entwicklung dieser App.
+    </p>
+
     <h2>Version</h2>
     <p>
         PleaseCatchMe v1.0 - Stand: April 2025
