--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     </p>
     <h2>Credits</h2>
     <p>
-      Special thanks to <strong>Thomas</strong> for the name <strong>Gotchya!</strong>.<br>
+      Special thanks to Thomas for the name <strong>Gotchya!</strong>.<br>
       Also thanks to my parents, my brother, my family, my friends and Anne for their support, patience and motivation.
     </p>
     <h2>Version</h2>
